# mycroft_plugin_silero_tts

./: .gitignore  README.md  setup.cfg
mycroft_plugin_silero_tts/: __init__.py  silero_tts.py
