[metadata]
name = mycroft_plugin_silero_tts
version = 0.0.1
description = Silero TTS plugin for Mycroft voice assistant
long_description = file: README.md
keywords = mycroft, tts, silero, plugin
license = GPLv3-or-later
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: Russian
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    torch

[options.entry_points]
mycroft.plugin.tts =
    silero = mycroft_plugin_silero_tts:SileroTTS

